<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">


    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.pgaa.teamvelocity.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_sprint"
        android:name="com.pgaa.teamvelocity.ui.home.SprintFragment"
        android:label="@string/title_sprint"
        tools:layout="@layout/fragment_sprint" />

    <fragment
        android:id="@+id/navigation_calculation"
        android:name="com.pgaa.teamvelocity.ui.calculation.CalculationFragment"
        android:label="@string/title_calculation"
        tools:layout="@layout/fragment_calculation" />
</navigation>