<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackgorund"
    android:padding="8dp">

    <TextView
        android:id="@+id/text_av_ratio_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/average_ratio"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_av_story_points_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/average_story_points"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_av_ratio_key"
        app:layout_constraintTop_toBottomOf="@+id/text_av_ratio_key" />

    <TextView
        android:id="@+id/text_av_manday_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/average_man_day"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_av_story_points_key"
        app:layout_constraintTop_toBottomOf="@+id/text_av_story_points_key" />

    <TextView
        android:id="@+id/text_av_ratio_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/text_av_ratio_key"
        app:layout_constraintTop_toTopOf="@+id/text_av_ratio_key"
        tools:text="1.75" />

    <TextView
        android:id="@+id/text_av_storypoint_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/text_av_ratio_value"
        app:layout_constraintTop_toTopOf="@+id/text_av_story_points_key"
        tools:text="65" />

    <TextView
        android:id="@+id/text_av_manday_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/text_av_storypoint_value"
        app:layout_constraintTop_toTopOf="@+id/text_av_manday_key"
        tools:text="55" />

    <Button
        android:id="@+id/button_create_report"
        android:layout_width="40dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/ic_archive_grey_24dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/text_av_manday_key"
        app:layout_constraintTop_toBottomOf="@+id/text_av_manday_key" />

</androidx.constraintlayout.widget.ConstraintLayout>